# vg-metrics-lakehouse

./: .gitignore  Makefile  README.md  pyproject.toml  source_data_schemas.txt
.github/workflows/: cd.yml  cd_airflow.yml  cd_lambda.yml
airflow/dags/: vg-lakehouse-dag.py
airflow/dags/glue-spark/: bronze_glue_script.py  gold_glue_script.py  silver_glue_script.py
glue-spark/: sample.py
lambda_data_generator/: Dockerfile  data_generator.py  requirements.txt
pipeline/: Dockerfile  docker-compose.yaml
pipeline/dags/: vg-lakehouse-dag.py
pipeline/dags/glue-spark/: bronze_glue_script.py  gold_glue_script.py  silver_glue_script.py
terraform/: .terraform.lock.hcl  main.tf  output.tf  variables.tf
