[tool.poetry]
name = "lakehouse-vg-sales"
version = "0.1.0"
description = ""
authors = ["Dorian <dorianteffo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ruff = "^0.3.5"
black = "^24.3.0"
mypy = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
